--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,3 @@
-#Created by JInto - www.guh-software.de
-#Wed Jun 18 21:31:46 CST 2014
-server.port=8082
-server.tomcat.access-log-enabled=true
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.password=123456
-#spring.datasource.url=jdbc\:mysql\://localhost\:3306/test?useUnicode\=true&characterEncoding\=utf-8
-#spring.datasource.username=root
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.view.prefix=/WEB-INF/views/
-spring.view.suffix=
+server.port:8082
+spring.mvc.view.prefix: /WEB-INF/views/
+spring.mvc.view.suffix: 
