--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,34 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.7</version>
 		</dependency>
+		
+		<!-- docker-java引用的jackson版本为2.1.2，springboot引用的jackson版本为2.6.3 ，使用时候有冲突，下面处理为统一版本为2.6.3-->
 		<dependency>
 		      <groupId>com.github.docker-java</groupId>
 		      <artifactId>docker-java</artifactId>
 		      <version>2.1.2</version>
+		      <exclusions>
+		      	<exclusion>
+					<groupId>com.fasterxml.jackson.jaxrs</groupId>
+					<artifactId>jackson-jaxrs-json-provider</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.module</groupId>
+					<artifactId>jackson-module-jaxb-annotations</artifactId>
+				</exclusion>
+		      </exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-json-provider</artifactId>
+			<version>2.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jaxb-annotations</artifactId>
+			<version>2.6.3</version>
+		</dependency>
+		<!-- docker-java end-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
