--- a/src/main/resources/docker.io.properties
+++ b/src/main/resources/docker.io.properties
@@ -1,3 +1,4 @@
 docker.io.url=http://10.0.93.3:2375
 docker.io.dockerCertPath=/etc/docker
+docker.io.username=10.0.93.25:5000
 docker.io.serverAddress=http://10.0.93.25:5000/v1/
