新增k8s交互api第一版

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,19 @@
 			<version>2.6.3</version>
 		</dependency>
 		<!-- docker-java end-->
+		
+		<!-- kubernetes api依赖jar start -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<version>3.0.9.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-joda</artifactId>
+			<version>2.6.3</version>
+		</dependency>
+		<!-- kubernetes api依赖jar end -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
