--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -1,13 +1,19 @@
-#Created by JInto - www.guh-software.de
-#Wed Jun 18 21:31:46 CST 2014
-server.port=8080
-server.tomcat.access-log-enabled=true
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.password=123456
-#spring.datasource.url=jdbc\:mysql\://localhost\:3306/test?useUnicode\=true&characterEncoding\=utf-8
-#spring.datasource.username=root
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.view.prefix=/WEB-INF/views/
-spring.view.suffix=
+server.port:8082
+spring.mvc.view.prefix: /WEB-INF/views/
+spring.mvc.view.suffix: 
+
+spring.datasource.url = jdbc:mysql://10.0.93.3:3306/epm_paas
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
