--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>chartjs</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 	</dependencies>
 
 </project>
