--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<version>1.3.0.RELEASE</version>
 	</parent>
 	<build>
+		<finalName>paas</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
