--- a/src/main/resources/kubernetes.api.properties
+++ b/src/main/resources/kubernetes.api.properties
@@ -1,3 +1,5 @@
 kubernetes.api.endpoint=http://10.0.93.240:8080/
 kubernetes.api.username=root
 kubernetes.api.password=rootroot
+
+kubernetes.api.startport=31000
