--- a/src/main/resources/nginxConf.io.properties
+++ b/src/main/resources/nginxConf.io.properties
@@ -1,3 +1,3 @@
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=/sbin/nginx
-nginxConf.io.confip=10.0.93.3
+nginxConf.io.confurl=http://10.0.93.3
