--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -2,7 +2,7 @@ server.port:8082
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: 
 
-spring.datasource.url = jdbc:mysql://172.16.71.169:3306/epm_paas?characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/epm_paas?characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -17,3 +17,8 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# MULTIPART (MultipartProperties)
+multipart.enabled=true
+multipart.max-file-size=200Mb 
+multipart.max-request-size=400Mb 
