增加数据库连接Idle配置

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,3 +22,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 multipart.enabled=true
 multipart.max-file-size=200Mb
 multipart.max-request-size=400Mb
+
+spring.datasource.max-idle=5
+spring.datasource.min-idle=1
+spring.datasource.test-while-idle=true
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
