--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.46</version>
 		</dependency>
+		<dependency>
+			<groupId>org.influxdb</groupId>
+			<artifactId>influxdb-java</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 
 </project>
