--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@ server.port:8082
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: 
 
-spring.datasource.url = jdbc:mysql://172.16.71.169:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = a1s2d3
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
