--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.profiles.active=dev
+spring.profiles.active=@profileActive@
+
+spring.mvc.view.prefix: /WEB-INF/views/
+spring.mvc.view.suffix: 
+#logback
+logging.path=./logback/text
+# MULTIPART (MultipartProperties)
+multipart.enabled=true
+multipart.max-file-size=200Mb
+multipart.max-request-size=400Mb
+
+spring.datasource.max-idle=5
+spring.datasource.min-idle=1
+spring.datasource.test-while-idle=true
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+
