--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -1,9 +1,9 @@
 server.port:8082
 
 # datasource
-spring.datasource.url = jdbc:mysql://172.16.71.169:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = a1s2d3
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -17,12 +17,12 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #docker()
-docker.io.url=http://172.16.71.169:2375
+docker.io.url=http://172.16.71.179:2375
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=172.16.71.169:5000
+docker.io.username=172.16.71.179:5000
 docker.io.password=root
 docker.io.email=yangjian@bonc.com.cn
-docker.io.serverAddress=http://172.16.71.169:5000/v1/
+docker.io.serverAddress=http://172.16.71.179:5000/v1/
 
 #kubernetes()
 kubernetes.api.endpoint=http://10.0.93.240:8080/
