--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -16,6 +16,9 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+#temp code file path()
+paas.codetemp.path=./codetemp
+
 #docker()
 docker.io.url=http://10.0.93.3:2375
 docker.io.dockerCertPath=/etc/docker
