--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -1,7 +1,5 @@
-server.port:8082
-
 # datasource
-spring.datasource.url = jdbc:mysql://10.0.93.3:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://10.161.18.181:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -17,24 +15,24 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
-paas.codetemp.path=./codetemp
+paas.codetemp.path=../codetemp
 
 #docker()
-docker.io.url=http://10.0.93.3:2375
+docker.io.url=http://10.161.18.181:2375
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.0.93.25:5000
+docker.io.username=10.161.18.181:5000
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://10.0.93.25:5000/v1/
+docker.io.serverAddress=http://10.161.18.181:5000/v1/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.0.93.240:8080/
+kubernetes.api.endpoint=http://10.161.18.181:8080/
 kubernetes.api.username=root
 kubernetes.api.password=rootroot
-kubernetes.api.startport=31000
-kubernetes.api.address=10.0.93.240
+kubernetes.api.startport=32000
+kubernetes.api.address=10.161.18.181
 
 #nginxConf()
-nginxConf.io.confpath=/etc/nginx/conf.d/
-nginxConf.io.cmdpath=/sbin/nginx
-nginxConf.io.confurl=http://10.0.93.3
+nginxConf.io.confpath=/bonc/nginx/nginx/conf.d/
+nginxConf.io.cmdpath=/bonc/nginx/nginx/sbin/nginx
+nginxConf.io.confurl=http://132.35.224.164
