--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -38,3 +38,4 @@ kubernetes.api.address=10.0.93.240
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=/sbin/nginx
 nginxConf.io.confurl=http://10.0.93.3
+nginxConf.io.serverIP=10.0.93.242,10.0.93.243
