修改template模板替换方式

--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -38,3 +38,4 @@ kubernetes.api.address=172.16.71.171
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=/sbin/nginx
 nginxConf.io.confurl=http://172.16.71.175
+nginxConf.io.serverIP=10.0.93.242,10.0.93.243
