--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -1,9 +1,9 @@
 server.port:8082
 
 # datasource
-spring.datasource.url = jdbc:mysql://172.16.71.169:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://172.16.71.149:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = a1s2d3
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
