修改yum源,判断远程执行状态

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -39,3 +39,6 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=/sbin/nginx
 nginxConf.io.confurl=http://10.0.93.3
 nginxConf.io.serverIP=10.0.93.242,10.0.93.243
+
+#yum_source
+yumConf.io.address=172.16.71.175
