--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -37,3 +37,6 @@ nginxConf.io.confpath=/bonc/nginx/nginx/conf.d/
 nginxConf.io.cmdpath=/bonc/nginx/nginx/sbin/nginx
 nginxConf.io.confurl=http://132.35.224.164
 nginxConf.io.serverIP=10.161.18.181,10.161.18.182,10.161.18.183,10.161.18.184,10.161.18.185
+
+#yum_source
+yumConf.io.address=172.16.71.175
