修改dev数据库配置为h2，并将环境设置为205，并修改rest日志记录

--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
-		<!--  <dependency>
+		<dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-        </dependency> -->
+        </dependency>
         <dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
