--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,44 +1,49 @@
 server.port:8082
 
 # datasource
-spring.datasource.url = jdbc:mysql://10.0.93.65:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-# Specify the DBMS
-spring.jpa.database = MYSQL
-# Show or not log for each sql query
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./h2/dev_paas
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database = H2
 spring.jpa.show-sql = true
-# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
-# Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+#spring.datasource.url = jdbc:mysql://10.0.93.65:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+#spring.datasource.username = root
+#spring.datasource.password = root
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
+#spring.jpa.database = MYSQL
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=./codetemp
 
 #docker()
-docker.io.url=http://10.0.93.65:2375
+docker.io.url=http://10.0.93.205:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.0.93.65:5000
+docker.io.username=10.0.93.205:5000
 docker.io.password=root
-docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://10.0.93.65:5000/v2/
+docker.io.email=root@bonc.com.cn
+docker.io.serverAddress=http://10.0.93.205:5000/v2/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.0.93.240:8080/
+kubernetes.api.endpoint=http://10.0.93.205:8080/
 kubernetes.api.username=root
-kubernetes.api.password=rootroot
-kubernetes.api.startport=31000
-kubernetes.api.address=10.0.93.240
+kubernetes.api.password=root
+kubernetes.api.startport=30000
+kubernetes.api.address=10.0.93.205
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=/sbin/nginx
-nginxConf.io.confurl=http://10.0.93.65
-nginxConf.io.serverIP=10.0.93.242,10.0.93.243
+nginxConf.io.confurl=http://10.0.93.205
+nginxConf.io.serverIP=10.0.93.1,10.0.93.141
 
 #yum_source
 yumConf.io.address=172.16.71.175
