--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,24 +1,24 @@
 server.port:8082
 
 # datasource
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./h2/dev_paas
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database = H2
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-
-#spring.datasource.url = jdbc:mysql://10.0.93.65:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
-#spring.datasource.username = root
-#spring.datasource.password = root
-#spring.datasource.driverClassName = com.mysql.jdbc.Driver
-#spring.jpa.database = MYSQL
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:./h2/dev_paas
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database = H2
 #spring.jpa.show-sql = true
 #spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+spring.datasource.url = jdbc:mysql://10.0.93.205:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.username = root
+spring.datasource.password = root.123
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
