--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -1,7 +1,7 @@
 server.port:8082
 
 # datasource
-spring.datasource.url = jdbc:mysql://172.16.71.149:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 
 spring.datasource.username = root
 spring.datasource.password = a1s2d3
@@ -29,11 +29,11 @@ docker.io.email=yangjian@bonc.com.cn
 docker.io.serverAddress=http://192.168.8.209:5000/v1/
 
 #kubernetes()
-kubernetes.api.endpoint=http://172.16.71.171:8080/
+kubernetes.api.endpoint=http://10.0.93.240:8080/
 kubernetes.api.username=root
 kubernetes.api.password=rootroot
 kubernetes.api.startport=31000
-kubernetes.api.address=172.16.71.171
+kubernetes.api.address=10.0.93.205
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
