1.日志获取方式改为用elasticsearch从logstach收集（es集群ip从配置文件获取） 2.修改服务创建时内存余量的显示

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -45,5 +45,8 @@ nginxConf.io.cmdpath=/sbin/nginx
 nginxConf.io.confurl=http://10.0.93.205
 nginxConf.io.serverIP=10.0.93.1,10.0.93.141
 
+#elasticsearch host
+es.io.host=10.0.93.205:9300
+
 #yum_source
 yumConf.io.address=172.16.71.175
