--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -40,3 +40,6 @@ nginxConf.io.serverIP=10.161.18.182,10.161.18.183
 
 #yum_source
 yumConf.io.address=172.16.71.175
+
+#elasticsearch host
+es.io.host=10.0.93.205:9300
