--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -44,3 +44,6 @@ nginxConf.io.serverIP=10.0.93.242,10.0.93.243
 
 #yum_source
 yumConf.io.address=172.16.71.175
+
+#elasticsearch host
+es.io.host=10.0.93.205:9300
