--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,17 @@
 			<artifactId>influxdb-java</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<!-- elasticsearch -->
+		<dependency>
+    		<groupId>org.elasticsearch</groupId>
+    		<artifactId>elasticsearch</artifactId>
+    		<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
 	</dependencies>
 <profiles>
 		<profile>
