增加单点登录

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -50,3 +50,11 @@ es.io.host=10.0.93.205:9300
 
 #yum_source
 yumConf.io.address=172.16.71.175
+
+#cas sso
+sso.enable=true
+sso.server-logout-url=http://10.0.93.174:7777/cas/logout
+#cas client config
+cas.server-url-prefix=http://10.0.93.174:7777/cas
+cas.server-login-url=http://10.0.93.174:7777/cas/login
+cas.client-host-url=http://127.0.0.1:8082
