--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -43,3 +43,11 @@ yumConf.io.address=172.16.71.175
 
 #elasticsearch host
 es.io.host=10.0.93.205:9300
+
+#cas sso
+sso.enable=true
+sso.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90:8082/cas/login
+#cas client config
+cas.server-url-prefix=http://132.35.227.90:8082/cas
+cas.server-login-url=http://132.35.227.90:8082/cas/login
+cas.client-host-url=http://132.35.224.164:8080
