修改sso.server-logout-url

--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -46,7 +46,7 @@ es.io.host=10.0.93.205:9300
 
 #cas sso
 sso.enable=true
-sso.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90:8082/cas/login
+sso.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90/portal/
 #cas client config
 cas.server-url-prefix=http://132.35.227.90:8082/cas
 cas.server-login-url=http://132.35.227.90:8082/cas/login
