--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,17 +25,17 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 paas.codetemp.path=./codetemp
 
 #docker()
-docker.io.url=http://10.0.93.205:28015
+docker.io.url=http://10.0.93.204:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.0.93.205:5000
+docker.io.username=10.0.93.204:5000
 docker.io.password=root
 docker.io.email=root@bonc.com.cn
-docker.io.serverAddress=http://10.0.93.205:5000/v2/
+docker.io.serverAddress=http://10.0.93.204:5000/v2/
 
 #kubernetes()
 kubernetes.api.endpoint=http://10.0.93.205:8080/
 kubernetes.api.username=root
-kubernetes.api.password=root
+kubernetes.api.password=root.123
 kubernetes.api.startport=30000
 kubernetes.api.address=10.0.93.205
 
