--- a/pom.xml
+++ b/pom.xml
@@ -112,11 +112,17 @@
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>net.unicon.cas</groupId>
 			<artifactId>cas-client-autoconfig-support</artifactId>
 			<version>1.1.0-GA</version>
-		</dependency>
+		</dependency> -->
+		<dependency>
+	      <groupId>org.jasig.cas.client</groupId>
+	      <artifactId>cas-client-core</artifactId>
+	      <version>3.4.1</version>
+	      <scope>compile</scope>
+	    </dependency>
 	</dependencies>
 <profiles>
 		<profile>
