--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -1,24 +1,29 @@
 # datasource
-spring.datasource.url = jdbc:mysql://10.161.48.130:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-# Specify the DBMS
-spring.jpa.database = MYSQL
-# Show or not log for each sql query
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./h2/dev_paas
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database = H2
 spring.jpa.show-sql = true
-# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
-# Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-# stripped before adding them to the entity manager)
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+#spring.datasource.url = jdbc:mysql://10.161.48.130:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+#spring.datasource.username = root
+#spring.datasource.password = root
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
+#spring.jpa.database = MYSQL
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=../codetemp
 
 #docker()
-docker.io.url=http://10.161.48.112:2375
+docker.io.url=http://10.161.48.112:28015
 docker.io.dockerCertPath=/etc/docker
 docker.io.username=10.161.48.112:5000
 docker.io.password=root
@@ -29,13 +34,13 @@ docker.io.serverAddress=http://10.161.48.112:5000/v2/
 kubernetes.api.endpoint=http://10.161.48.113:8080/
 kubernetes.api.username=root
 kubernetes.api.password=rootroot
-kubernetes.api.startport=30000
+kubernetes.api.startport=30100
 kubernetes.api.address=10.161.48.113
 
 #nginxConf()
-nginxConf.io.confpath=/etc/nginx/conf.d/
-nginxConf.io.cmdpath=/sbin/nginx
-nginxConf.io.confurl=http://10.161.48.130
+nginxConf.io.confpath=/home/guest_cuidong/nginx/conf/conf.d/
+nginxConf.io.cmdpath=/home/guest_cuidong/nginx/sbin/nginx
+nginxConf.io.confurl=http://132.35.224.151
 nginxConf.io.serverIP=10.161.48.114,10.161.48.115,10.161.48.116,10.161.48.117,10.161.48.118
 
 #yum_source
