--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -59,7 +59,7 @@ cas.server-url-prefix=http://10.0.93.174:7777/cas
 cas.server-login-url=http://10.0.93.174:7777/cas/login
 cas.client-host-url=http://127.0.0.1:8082
 
-cc.url=http://10.0.93.1:30002
-cc.username=root
-cc.password=root
-cc.dbName=k8s
+monitor.url=http://10.0.93.1:30002
+monitor.username=root
+monitor.password=root
+monitor.dbName=k8s
