修改monitor配置项

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -52,7 +52,7 @@ es.io.host=10.0.93.205:9300
 yumConf.io.address=172.16.71.175
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://10.0.93.174:7777/cas/logout
 #cas client config
 cas.server-url-prefix=http://10.0.93.174:7777/cas
