--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -51,3 +51,9 @@ cas.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35
 cas.server-url-prefix=http://132.35.227.90:8082/cas
 cas.server-login-url=http://132.35.227.90:8082/cas/login
 cas.client-host-url=http://132.35.224.164:8080
+
+#monitor
+monitor.url=http://10.0.93.1:30002
+monitor.username=root
+monitor.password=root
+monitor.dbName=k8s
