--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,43 +1,44 @@
 server.port:8082
 
 # datasource
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:file:./h2/dev_paas
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database = H2
-#spring.jpa.show-sql = true
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-
-spring.datasource.url = jdbc:mysql://10.0.93.205:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
-spring.datasource.username = root
-spring.datasource.password = root.123
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.jpa.database = MYSQL
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./h2/dev_paas
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database = H2
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+#spring.datasource.url = jdbc:mysql://10.0.93.205:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+#spring.datasource.username = root
+#spring.datasource.password = root.123
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
+#spring.jpa.database = MYSQL
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=./codetemp
 
 #docker()
-docker.io.url=http://10.0.93.204:28015
+docker.io.url=http://10.0.93.240:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.0.93.204:5000
+docker.io.username=10.0.93.240:5000
 docker.io.password=root
 docker.io.email=root@bonc.com.cn
-docker.io.serverAddress=http://10.0.93.204:5000/v2/
+docker.io.serverAddress=http://10.0.93.240:5000/v2/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.0.93.205:8080/
+kubernetes.api.endpoint=http://10.0.93.240:8080/
 kubernetes.api.username=root
 kubernetes.api.password=root.123
 kubernetes.api.startport=30000
-kubernetes.api.address=10.0.93.205
+kubernetes.api.address=10.0.93.240
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
@@ -52,14 +53,14 @@ es.io.host=10.0.93.205:9300
 yumConf.io.address=172.16.71.175
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://10.0.93.174:7777/cas/logout
 #cas client config
 cas.server-url-prefix=http://10.0.93.174:7777/cas
 cas.server-login-url=http://10.0.93.174:7777/cas/login
 cas.client-host-url=http://127.0.0.1:8082
 
-monitor.url=http://10.0.93.1:30002
+monitor.url=http://10.0.92.203:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
