--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.bonc.epm</groupId>
 	<artifactId>paas</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	
+
 	<name>paas</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.0.RELEASE</version>
 	</parent>
 	<properties>
-	 	<java.version>1.8</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -32,23 +32,23 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-        <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.7</version>
 		</dependency>
-		
-		<!-- docker-java引用的jackson版本为2.1.2，springboot引用的jackson版本为2.6.3 ，使用时候有冲突，下面处理为统一版本为2.6.3-->
+
+		<!-- docker-java引用的jackson版本为2.1.2，springboot引用的jackson版本为2.6.3 ，使用时候有冲突，下面处理为统一版本为2.6.3 -->
 		<!-- kubernetes api依赖的jersey在dockerjava中已经引用 -->
 		<dependency>
-		      <groupId>com.github.docker-java</groupId>
-		      <artifactId>docker-java</artifactId>
-		      <version>2.1.2</version>
-		      <exclusions>
-		      	<exclusion>
+			<groupId>com.github.docker-java</groupId>
+			<artifactId>docker-java</artifactId>
+			<version>2.1.2</version>
+			<exclusions>
+				<exclusion>
 					<groupId>com.fasterxml.jackson.jaxrs</groupId>
 					<artifactId>jackson-jaxrs-json-provider</artifactId>
 				</exclusion>
@@ -56,7 +56,7 @@
 					<groupId>com.fasterxml.jackson.module</groupId>
 					<artifactId>jackson-module-jaxb-annotations</artifactId>
 				</exclusion>
-		      </exclusions>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
@@ -68,8 +68,8 @@
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>2.6.3</version>
 		</dependency>
-		<!-- docker-java end-->
-		
+		<!-- docker-java end -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -81,11 +81,11 @@
 			<scope>provided</scope>
 		</dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
-        </dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>chartjs</artifactId>
@@ -103,28 +103,25 @@
 		</dependency>
 		<!-- elasticsearch -->
 		<dependency>
-    		<groupId>org.elasticsearch</groupId>
-    		<artifactId>elasticsearch</artifactId>
-    		<version>2.2.0</version>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>net.unicon.cas</groupId>
-			<artifactId>cas-client-autoconfig-support</artifactId>
-			<version>1.1.0-GA</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.unicon.cas</groupId> <artifactId>cas-client-autoconfig-support</artifactId> 
+			<version>1.1.0-GA</version> </dependency> -->
 		<dependency>
-	      <groupId>org.jasig.cas.client</groupId>
-	      <artifactId>cas-client-core</artifactId>
-	      <version>3.4.1</version>
-	      <scope>compile</scope>
-	    </dependency>
+			<groupId>org.jasig.cas.client</groupId>
+			<artifactId>cas-client-core</artifactId>
+			<version>3.4.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
-<profiles>
+	<profiles>
 		<profile>
 			<id>dev</id>
 			<properties>
