--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,11 +34,11 @@ docker.io.email=root@bonc.com.cn
 docker.io.serverAddress=http://10.0.93.240:5000/v2/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.0.92.201:8080/
+kubernetes.api.endpoint=http://10.0.92.211:8080/
 kubernetes.api.username=root
 kubernetes.api.password=123456
 kubernetes.api.startport=30000
-kubernetes.api.address=10.0.92.201
+kubernetes.api.address=10.0.92.211
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
@@ -52,15 +52,23 @@ es.io.host=10.0.93.205:9300
 #yum_source
 yumConf.io.address=172.16.71.175
 
+##cas sso
+#cas.enable=true
+#cas.server-logout-url=http://10.0.93.174:7777/cas/logout
+##cas client config
+#cas.server-url-prefix=http://10.0.93.174:7777/cas
+#cas.server-login-url=http://10.0.93.174:7777/cas/login
+#cas.client-host-url=http://10.0.92.50:8082
+
 #cas sso
 cas.enable=false
-cas.server-logout-url=http://10.0.93.174:7777/cas/logout
+cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 #cas client config
-cas.server-url-prefix=http://10.0.93.174:7777/cas
-cas.server-login-url=http://10.0.93.174:7777/cas/login
-cas.client-host-url=http://127.0.0.1:8082
+cas.server-url-prefix=http://10.0.93.174:8088/cas
+cas.server-login-url=http://10.0.93.174:8088/cas/login
+cas.client-host-url=http://10.0.92.50:8082
 
-monitor.url=http://10.0.92.203:30002
+monitor.url=http://10.0.92.213:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
