--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -61,7 +61,7 @@ yumConf.io.address=172.16.71.175
 #cas.client-host-url=http://10.0.92.50:8082
 
 #cas sso
-cas.enable=false
+cas.enable=true
 cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 #cas client config
 cas.server-url-prefix=http://10.0.93.174:8088/cas
