--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -1,7 +1,7 @@
 # datasource
-spring.datasource.url = jdbc:mysql://10.161.18.181:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://10.161.48.112:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -18,19 +18,19 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 paas.codetemp.path=../codetemp
 
 #docker()
-docker.io.url=http://10.161.18.181:2375
+docker.io.url=http://10.161.48.112:2375
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.161.18.181:5000
+docker.io.username=10.161.48.112:5000
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://10.161.18.181:5000/v1/
+docker.io.serverAddress=http://10.161.48.112:5000/v1/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.161.18.181:8080/
-kubernetes.api.username=root
-kubernetes.api.password=rootroot
+kubernetes.api.endpoint=http://10.161.48.124:8080/
+kubernetes.api.username=paas
+kubernetes.api.password=2sA_8fF_6dG
 kubernetes.api.startport=30000
-kubernetes.api.address=10.161.18.181
+kubernetes.api.address=10.161.48.124
 
 #nginxConf()
 nginxConf.io.confpath=/bonc/nginx/nginx/conf.d/
@@ -39,7 +39,7 @@ nginxConf.io.confurl=http://132.35.224.164
 nginxConf.io.serverIP=10.161.18.182,10.161.18.183
 
 #yum_source
-yumConf.io.address=172.16.71.175
+yumConf.io.address=10.161.48.112
 
 #elasticsearch host
 es.io.host=10.0.93.205:9300
@@ -53,7 +53,7 @@ cas.server-login-url=http://132.35.227.90:8082/cas/login
 cas.client-host-url=http://132.35.224.164:8080
 
 #monitor
-monitor.url=http://10.0.93.1:30002
+monitor.url=http://10.161.48.125:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
