租户的同步创建,namespace同步,quota同步

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,11 +34,11 @@ docker.io.email=root@bonc.com.cn
 docker.io.serverAddress=http://10.0.93.240:5000/v2/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.0.92.211:8080/
+kubernetes.api.endpoint=http://10.0.92.207:8080/
 kubernetes.api.username=root
 kubernetes.api.password=123456
 kubernetes.api.startport=30000
-kubernetes.api.address=10.0.92.211
+kubernetes.api.address=10.0.92.207
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
@@ -47,10 +47,13 @@ nginxConf.io.confurl=http://10.0.93.205
 nginxConf.io.serverIP=10.0.93.1,10.0.93.141
 
 #elasticsearch host
-es.io.host=10.0.93.205:9300
+resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
 
 #yum_source
 yumConf.io.address=172.16.71.175
+
+#elasticsearch host
+es.io.host=10.0.93.205:9300
 
 ##cas sso
 #cas.enable=true
