--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -38,6 +38,9 @@ nginxConf.io.cmdpath=/bonc/nginx/nginx/sbin/nginx
 nginxConf.io.confurl=http://132.35.224.164
 nginxConf.io.serverIP=10.161.18.182,10.161.18.183
 
+#elasticsearch host
+resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
+
 #yum_source
 yumConf.io.address=10.161.48.112
 
