--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=@profileActive@
+spring.profiles.active=profile
 
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: 
