--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,7 +26,7 @@ spring.h2.console.enabled=true
 paas.codetemp.path=./codetemp
 
 #docker()
-docker.io.url=http://10.0.93.240:28015
+docker.io.url=http://10.0.93.211:28015
 docker.io.dockerCertPath=/etc/docker
 docker.io.username=10.0.93.240:5000
 docker.io.password=root
@@ -64,7 +64,7 @@ es.io.host=10.0.93.205:9300
 #cas.client-host-url=http://10.0.92.50:8082
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 #cas client config
 cas.server-url-prefix=http://10.0.93.174:8088/cas
