--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,77 +1,74 @@
-server.port:8082
-
 # datasource
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./h2/dev_paas
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database = H2
+spring.datasource.url = jdbc:mysql://10.162.2.121:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.username = root
+spring.datasource.password = 123456
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
 spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-
-#spring.datasource.url = jdbc:mysql://10.0.93.205:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
-#spring.datasource.username = root
-#spring.datasource.password = root.123
-#spring.datasource.driverClassName = com.mysql.jdbc.Driver
-#spring.jpa.database = MYSQL
-#spring.jpa.show-sql = true
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
-paas.codetemp.path=./codetemp
+paas.codetemp.path=../codetemp
 
 #docker()
-docker.io.url=http://10.0.92.211:28015
+#docker.io.url=http://10.162.2.121:28015
+#docker.io.dockerCertPath=/etc/docker
+#docker.io.username=10.162.2.121:5000
+#docker.io.password=root
+#docker.io.email=xx@bonc.com.cn
+#docker.io.serverAddress=http://10.162.2.121:5000/v1/
+docker.io.url=http://10.161.48.112:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.0.92.211:5000
+docker.io.username=10.161.48.112:5000
 docker.io.password=root
-docker.io.email=root@bonc.com.cn
-docker.io.serverAddress=http://10.0.92.211:5000/v2/
+docker.io.email=xx@bonc.com.cn
+docker.io.serverAddress=http://10.161.48.112:5000/v1/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.0.92.207:8080/
-kubernetes.api.username=root
-kubernetes.api.password=123456
-kubernetes.api.startport=30000
-kubernetes.api.address=10.0.92.207
+#kubernetes.api.endpoint=http://10.162.6.222:8080/
+#kubernetes.api.username=docker
+#kubernetes.api.password=Pe5_EZk6_DOx4
+#kubernetes.api.startport=30010
+#kubernetes.api.address=10.162.6.222
+kubernetes.api.endpoint=http://10.161.48.124:8080/
+kubernetes.api.username=paas
+kubernetes.api.password=2sA_8fF_6dG
+kubernetes.api.startport=30110
+kubernetes.api.address=10.161.48.124
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
-nginxConf.io.cmdpath=/sbin/nginx
-nginxConf.io.confurl=http://10.0.93.205
-nginxConf.io.serverIP=10.0.93.1,10.0.93.141
+nginxConf.io.cmdpath=/usr/sbin/nginx
+nginxConf.io.confurl=http://10.162.2.120
+#nginxConf.io.serverIP=10.162.2.115,10.162.2.116,10.162.2.117,10.162.2.118,10.162.2.119
+nginxConf.io.serverIP=10.161.48.113,10.161.48.114,10.161.48.115,10.161.48.116,10.161.48.117,10.161.48.118,10.161.48.119,10.161.48.120,10.161.48.121,10.161.48.122,10.161.48.123,10.161.48.125,10.161.48.126,10.161.48.127
 
 #elasticsearch host
-resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
+resourceMmanage.address=http://10.161.35.65:1821/resreq/restlet/resourceArchive/showAllResource
 
 #yum_source
-yumConf.io.address=10.0.92.211
+yumConf.io.address=10.162.2.121
 
 #elasticsearch host
-es.io.host=10.0.93.205:9300
-
-##cas sso
-#cas.enable=true
-#cas.server-logout-url=http://10.0.93.174:7777/cas/logout
-##cas client config
-#cas.server-url-prefix=http://10.0.93.174:7777/cas
-#cas.server-login-url=http://10.0.93.174:7777/cas/login
-#cas.client-host-url=http://10.0.92.50:8082
+es.io.host=10.162.2.121:9300
 
 #cas sso
-cas.enable=false
-cas.server-logout-url=http://10.0.93.174:8088/cas/logout
+cas.enable=true
+cas.server-logout-url=http://10.161.35.65:1821/cas/logout?service=http://10.161.35.65:1821/portal/
 #cas client config
-cas.server-url-prefix=http://10.0.93.174:8088/cas
-cas.server-login-url=http://10.0.93.174:8088/cas/login
-cas.client-host-url=http://10.0.92.50:8082
+cas.server-url-prefix=http://10.161.35.65:1821/cas
+cas.server-login-url=http://10.161.35.65:1821/cas/login
+cas.client-host-url=http://10.162.2.120:8080
 
-monitor.url=http://10.0.92.213:30002
+#monitor
+monitor.url=http://10.162.2.115:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
