--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -1,3 +1,5 @@
+server.port:8082
+
 # datasource
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./h2/dev_paas
@@ -8,10 +10,11 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 
-#spring.datasource.url = jdbc:mysql://10.161.48.130:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+#spring.datasource.url = jdbc:mysql://10.0.93.205:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 #spring.datasource.username = root
-#spring.datasource.password = root
+#spring.datasource.password = root.123
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
 #spring.jpa.database = MYSQL
 #spring.jpa.show-sql = true
@@ -20,45 +23,55 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
-paas.codetemp.path=../codetemp
+paas.codetemp.path=./codetemp
 
 #docker()
-docker.io.url=http://10.161.48.112:28015
+docker.io.url=http://10.0.92.211:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.161.48.112:5000
+docker.io.username=10.0.92.211:5000
 docker.io.password=root
-docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://10.161.48.112:5000/v2/
+docker.io.email=root@bonc.com.cn
+docker.io.serverAddress=http://10.0.92.211:5000/v2/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.161.48.113:8080/
+kubernetes.api.endpoint=http://10.0.92.211:8080/
 kubernetes.api.username=root
-kubernetes.api.password=rootroot
-kubernetes.api.startport=30100
-kubernetes.api.address=10.161.48.113
+kubernetes.api.password=123456
+kubernetes.api.startport=30000
+kubernetes.api.address=10.0.92.211
 
 #nginxConf()
-nginxConf.io.confpath=/home/guest_cuidong/nginx/conf/conf.d/
-nginxConf.io.cmdpath=/home/guest_cuidong/nginx/sbin/nginx
-nginxConf.io.confurl=http://132.35.224.151
-nginxConf.io.serverIP=10.161.48.114,10.161.48.115,10.161.48.116,10.161.48.117,10.161.48.118
-
-#yum_source
-yumConf.io.address=10.161.48.112
+nginxConf.io.confpath=/etc/nginx/conf.d/
+nginxConf.io.cmdpath=/sbin/nginx
+nginxConf.io.confurl=http://10.0.93.205
+nginxConf.io.serverIP=10.0.93.1,10.0.93.141
 
 #elasticsearch host
-es.io.host=10.161.48.130:9300
+resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
+
+#yum_source
+yumConf.io.address=10.0.92.211
+
+#elasticsearch host
+es.io.host=10.0.93.205:9300
+
+##cas sso
+#cas.enable=true
+#cas.server-logout-url=http://10.0.93.174:7777/cas/logout
+##cas client config
+#cas.server-url-prefix=http://10.0.93.174:7777/cas
+#cas.server-login-url=http://10.0.93.174:7777/cas/login
+#cas.client-host-url=http://10.0.92.50:8082
 
 #cas sso
-cas.enable=false
-cas.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90:8082/cas/login
+cas.enable=true
+cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 #cas client config
-cas.server-url-prefix=http://132.35.227.90:8082/cas
-cas.server-login-url=http://132.35.227.90:8082/cas/login
-cas.client-host-url=http://132.35.224.164:8080
+cas.server-url-prefix=http://10.0.93.174:8088/cas
+cas.server-login-url=http://10.0.93.174:8088/cas/login
+cas.client-host-url=http://10.0.92.50:8082
 
-#monitor
-monitor.url=http://10.0.93.1:30002
+monitor.url=http://10.162.2.115:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
