--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -69,7 +69,7 @@ cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 #cas client config
 cas.server-url-prefix=http://10.0.93.174:8088/cas
 cas.server-login-url=http://10.0.93.174:8088/cas/login
-cas.client-host-url=http://10.0.92.50:8082
+cas.client-host-url=http://localhost:8082
 
 monitor.url=http://10.162.2.115:30002
 monitor.username=root
