注释掉测试代码

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -68,7 +68,8 @@ cas.server-login-url=http://10.161.35.65:1821/cas/login
 cas.client-host-url=http://10.162.2.120:8080
 
 #monitor
-monitor.url=http://10.162.2.115:30002
+#monitor.url=http://10.162.2.115:30002
+monitor.url=http://10.161.48.113:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
