修改监控BUG,telephone拼写错误的bug

--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -64,14 +64,14 @@ es.io.host=10.0.93.205:9300
 #cas.client-host-url=http://10.0.92.50:8082
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 #cas client config
 cas.server-url-prefix=http://10.0.93.174:8088/cas
 cas.server-login-url=http://10.0.93.174:8088/cas/login
 cas.client-host-url=http://localhost:8082
 
-monitor.url=http://10.162.2.115:30002
+monitor.url=http://10.162.2.121:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
