调试切换用户

--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -53,22 +53,22 @@ resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/s
 yumConf.io.address=10.0.92.211
 
 #elasticsearch host
-es.io.host=10.0.93.205:9300
+es.io.host=10.0.92.211:9300
 
 ##cas sso
 #cas.enable=true
-#cas.server-logout-url=http://10.0.93.174:7777/cas/logout
+#cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 ##cas client config
-#cas.server-url-prefix=http://10.0.93.174:7777/cas
-#cas.server-login-url=http://10.0.93.174:7777/cas/login
-#cas.client-host-url=http://10.0.92.50:8082
+#cas.server-url-prefix=http://10.0.93.174:8088/cas
+#cas.server-login-url=http://10.0.93.174:8088/cas/login
+#cas.client-host-url=http://localhost:8082
 
 #cas sso
-cas.enable=false
-cas.server-logout-url=http://10.0.93.174:8088/cas/logout
+cas.enable=true
+cas.server-logout-url=http://132.35.227.90:80/cas/logout?service=http://132.35.227.90/portal/
 #cas client config
-cas.server-url-prefix=http://10.0.93.174:8088/cas
-cas.server-login-url=http://10.0.93.174:8088/cas/login
+cas.server-url-prefix=http://132.35.227.90:80/cas
+cas.server-login-url=http://132.35.227.90:80/cas/login
 cas.client-host-url=http://localhost:8082
 
 monitor.url=http://10.162.2.121:30002
