增加cephfs控制类

--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -1,50 +1,50 @@
-server.port:8082
+#server.port:8082
 
 # datasource
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./h2/dev_paas
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database = H2
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-
-#spring.datasource.url = jdbc:mysql://10.0.93.205:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
-#spring.datasource.username = root
-#spring.datasource.password = root.123
-#spring.datasource.driverClassName = com.mysql.jdbc.Driver
-#spring.jpa.database = MYSQL
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:./h2/dev_paas
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database = H2
 #spring.jpa.show-sql = true
 #spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.username = root
+spring.datasource.password = 123456
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=./codetemp
 
 #docker()
-docker.io.url=http://10.0.92.211:28015
+docker.io.url=http://192.168.12.34:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.0.92.211:5000
+docker.io.username=192.168.12.34:5000
 docker.io.password=root
 docker.io.email=root@bonc.com.cn
-docker.io.serverAddress=http://10.0.92.211:5000/v2/
+docker.io.serverAddress=http://192.168.12.34:5000/v2/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.0.92.211:8080/
+kubernetes.api.endpoint=http://192.168.12.34:8080/
 kubernetes.api.username=root
-kubernetes.api.password=123456
+kubernetes.api.password=hadoop
 kubernetes.api.startport=30000
-kubernetes.api.address=10.0.92.211
+kubernetes.api.address=192.168.12.34
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=/sbin/nginx
-nginxConf.io.confurl=http://10.0.93.205
-nginxConf.io.serverIP=10.0.93.1,10.0.93.141
+nginxConf.io.confurl=http://192.168.12.42
+nginxConf.io.serverIP=192.168.12.35,192.168.12.36
 
 #elasticsearch host
 resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
@@ -64,14 +64,19 @@ es.io.host=10.0.92.211:9300
 #cas.client-host-url=http://localhost:8082
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://132.35.227.90:80/cas/logout?service=http://132.35.227.90/portal/
 #cas client config
 cas.server-url-prefix=http://132.35.227.90:80/cas
 cas.server-login-url=http://132.35.227.90:80/cas/login
 cas.client-host-url=http://localhost:8082
 
-monitor.url=http://10.162.2.121:30002
+monitor.url=http://192.168.12.35:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
+
+ceph.name=admin
+
+ceph.monitor=192.168.12.30:6789,192.168.12.31:6789,192.168.12.32:6789
+
