--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,21 @@
 			<version>3.4.1</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.ceph</groupId>
+			<artifactId>rados</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ceph</groupId>
+			<artifactId>libcephfs</artifactId>
+			<version>0.80.5</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
