--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -60,3 +60,8 @@ monitor.url=http://10.161.48.125:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
+
+ceph.name=admin
+ceph.monitor=192.168.12.30:6789,192.168.12.31:6789,192.168.12.32:6789
+ceph.key=QVFEb0sxVlhuRGVGRGhBQVBFcXN0N1dVd2VsMTZlT29kTXdKMWc9PQ==
+
