--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -64,3 +64,8 @@ monitor.url=http://10.162.2.115:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
+
+ceph.name=admin
+ceph.monitor=192.168.12.30:6789,192.168.12.31:6789,192.168.12.32:6789
+ceph.key=QVFEb0sxVlhuRGVGRGhBQVBFcXN0N1dVd2VsMTZlT29kTXdKMWc9PQ==
+
