--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -68,6 +68,7 @@ cas.server-url-prefix=http://132.35.227.90:80/cas
 cas.server-login-url=http://132.35.227.90:80/cas/login
 cas.client-host-url=http://localhost:8082
 
+#monitor
 monitor.url=http://192.168.12.35:30002
 monitor.username=root
 monitor.password=root
