--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -1,5 +1,5 @@
 # datasource
-spring.datasource.url = jdbc:mysql://10.161.48.112:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -18,25 +18,29 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 paas.codetemp.path=../codetemp
 
 #docker()
-docker.io.url=http://10.161.48.130:28015
+docker.io.url=http://192.168.0.29:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.161.48.130:5000
+docker.io.username=192.168.0.29:5000
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://10.161.48.130:5000/v1/
+docker.io.serverAddress=http://192.168.0.29:5000/v1/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.161.48.130:8080/
+kubernetes.api.endpoint=http://192.168.0.20:8080/
 kubernetes.api.username=paas
-kubernetes.api.password=2sA_8fF_6dG
+kubernetes.api.password=123456
 kubernetes.api.startport=30000
-kubernetes.api.address=10.161.48.130
+kubernetes.api.address=192.168.0.20
 
 #nginxConf()
-nginxConf.io.confpath=/bonc/nginx/nginx/conf.d/
-nginxConf.io.cmdpath=/bonc/nginx/nginx/sbin/nginx
-nginxConf.io.confurl=http://132.35.224.164
-nginxConf.io.serverIP=10.161.48.127,10.161.48.129
+nginxConf.io.confpath=/etc/nginx/conf.d/
+nginxConf.io.cmdpath=sudo nginx
+nginxConf.io.confurl=http://192.168.0.29
+nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
+
+#nginxserver
+nginx.server.DMZ=dmz
+nginx.server.USER=user
 
 #elasticsearch host
 resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
@@ -45,7 +49,7 @@ resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/s
 yumConf.io.address=10.161.48.112
 
 #elasticsearch host
-es.io.host=10.161.48.128:9300
+es.io.host=192.168.0.29:9300
 
 #cas sso
 cas.enable=false
@@ -56,11 +60,11 @@ cas.server-login-url=http://132.35.227.90:8082/cas/login
 cas.client-host-url=http://132.35.224.164:8080
 
 #monitor
-monitor.url=http://10.161.48.127:30002
+monitor.url=http://192.168.0.26:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
 
 ceph.name=admin
-ceph.monitor=192.168.12.30:6789,192.168.12.31:6789,192.168.12.32:6789
-ceph.key=QVFEb0sxVlhuRGVGRGhBQVBFcXN0N1dVd2VsMTZlT29kTXdKMWc9PQ==
+ceph.monitor=192.168.0.21:6789,192.168.0.22:6789,192.168.0.23:6789
+ceph.key=QVFDYWhZUlh6Y0pnR0JBQStzV2NGTURKNm9zQmtiM0w4TmxuWVE9PQ==
