--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,6 +30,7 @@ kubernetes.api.endpoint=http://192.168.0.20:8080/
 kubernetes.api.username=paas
 kubernetes.api.password=123456
 kubernetes.api.startport=30010
+kubernetes.api.endport=30200
 kubernetes.api.address=192.168.0.20
 
 #nginxConf()
