--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -39,6 +39,7 @@ kubernetes.api.endpoint=http://192.168.12.34:8080/
 kubernetes.api.username=root
 kubernetes.api.password=bonc1234
 kubernetes.api.startport=30000
+kubernetes.api.endport=30200
 kubernetes.api.address=192.168.12.34
 
 #nginxConf()
