--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # datasource
 spring.datasource.url = jdbc:mysql://192.168.0.29:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
