*:完善镜像下载功能

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,6 +27,12 @@ docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://192.168.0.29:5000/v1/
 
+#docer ssh()
+docker.image.url=192.168.0.29:5000
+docker.ssh.username=root
+docker.ssh.password=root.123
+docker.ssh.address=192.168.0.29
+
 #kubernetes()
 kubernetes.api.endpoint=http://192.168.0.20:8080/
 kubernetes.api.username=paas
