*: 修改下载镜像的配置文件

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -29,8 +29,8 @@ docker.io.serverAddress=http://192.168.0.29:5000/v1/
 
 #docer ssh()
 docker.image.url=192.168.0.29:5000
-docker.ssh.username=root
-docker.ssh.password=root.123
+docker.ssh.username=paas
+docker.ssh.password=123456
 docker.ssh.address=192.168.0.29
 
 #kubernetes()
