--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -27,6 +27,13 @@ docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://10.162.17.12:5000/v1/
 
+#docer ssh()
+docker.image.url=192.168.0.29:5000
+docker.ssh.username=paas
+docker.ssh.password=123456
+docker.ssh.address=192.168.0.29
+
+
 #kubernetes()
 kubernetes.api.endpoint=http://10.162.17.10:8080/
 kubernetes.api.username=docker
