--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -34,6 +34,12 @@ docker.io.password=bonc1234
 docker.io.email=root@bonc.com.cn
 docker.io.serverAddress=http://192.168.12.34:5000/v2/
 
+#docer ssh()
+docker.image.url=192.168.0.29:5000
+docker.ssh.username=paas
+docker.ssh.password=123456
+docker.ssh.address=192.168.0.29
+
 #kubernetes()
 kubernetes.api.endpoint=http://192.168.12.34:8080/
 kubernetes.api.username=root
