修改界面样式

--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -12,7 +12,7 @@ server.port:8082
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
 
-spring.datasource.url = jdbc:mysql://192.168.5.129:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://192.168.5.115:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 12345
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -27,25 +27,26 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 paas.codetemp.path=./codetemp
 
 #docker()
-docker.io.url=http://192.168.12.34:28015
+docker.io.url=http://192.168.5.129:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=192.168.12.34:5000
-docker.io.password=bonc1234
+docker.io.username=192.168.5.129:5000
+docker.io.password=123456
 docker.io.email=root@bonc.com.cn
-docker.io.serverAddress=http://192.168.12.34:5000/v2/
+docker.io.serverAddress=http://192.168.5.129:5000/v2/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.10.2.222:8080/
+kubernetes.api.endpoint=http://192.168.5.129:8080/
 kubernetes.api.username=paas
 kubernetes.api.password=123456
 kubernetes.api.startport=30000
-kubernetes.api.address=10.10.2.222
+kubernetes.api.address=192.168.5.129
+kubernetes.api.endport=30200
 
 #nginxConf()
 nginxConf.io.confpath=/usr/local/nginx/conf.d/
 nginxConf.io.cmdpath=/usr/local/nginx/sbin/nginx
-nginxConf.io.confurl=http://10.10.2.57
-nginxConf.io.serverIP=10.10.2.59
+nginxConf.io.confurl=http://192.168.5.129
+nginxConf.io.serverIP=192.168.5.131
 
 #nginxserver
 nginx.server.DMZ=dmz
@@ -55,10 +56,10 @@ nginx.server.USER=user
 resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
 
 #yum_source
-yumConf.io.address=10.10.2.43
+yumConf.io.address=192.168.5.115
 
 #elasticsearch host
-es.io.host=10.10.2.43:9300
+es.io.host=192.168.5.115:9300
 
 #cas sso
 cas.enable=false
@@ -69,7 +70,7 @@ cas.server-login-url=http://132.35.227.90:80/cas/login
 cas.client-host-url=http://localhost:8082
 
 #monitor
-monitor.url=http://10.10.2.43:30002
+monitor.url=http://192.168.5.115:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
