*：修改dev和profile文件

--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -26,6 +26,7 @@ docker.io.username=10.162.17.12:5000
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://10.162.17.12:5000/v1/
+docker.io.nodeUrl=http://10.162.17.12:28015
 
 #kubernetes()
 kubernetes.api.endpoint=http://10.162.17.10:8080/
