*：镜像下载的完善

--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -19,6 +19,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #temp code file path()
 paas.codetemp.path=../codetemp
 
+#temp image file path()
+paas.image.path=../downimage
+#temp save image file path()
+paas.saveimage.path=/home/paas/paas/apache-tomcat-8.0.32/downimage/
+
 #docker()
 docker.io.url=http://10.162.17.12:28015
 docker.io.dockerCertPath=/etc/docker
