--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -26,6 +26,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #temp code file path()
 paas.codetemp.path=./codetemp
 
+#temp image file path()
+paas.image.path=../downimage
+#temp save image file path()
+paas.saveimage.path=/home/paas/paas/apache-tomcat-8.0.32/downimage/
+
 #docker()
 docker.io.url=http://192.168.12.34:28015
 docker.io.dockerCertPath=/etc/docker
