多文件上传

--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -59,6 +59,7 @@ nginxConf.io.confpath=/usr/local/nginx/conf.d/
 nginxConf.io.cmdpath=/usr/local/nginx/sbin/nginx
 nginxConf.io.confurl=http://192.168.5.129
 nginxConf.io.serverIP=192.168.5.131
+nginxConf.io.serverAddr=http:///192.168.5.129
 
 #nginxserver
 nginx.server.DMZ=dmz
