*：对比三份配置文件，进行补全

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,7 +18,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=../codetemp
-
 #temp image file path()
 paas.image.path=../downimage
 #temp save image file path()
@@ -65,17 +64,19 @@ nginxConf.io.serverAddr=unicom.bonc.com
 nginx.server.DMZ=dmz
 nginx.server.USER=user
 
-#elasticsearch host
+#resource address
 resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
 
 #yum_source
 yumConf.io.address=10.161.48.112
+
 #elasticsearch host
 es.io.host=192.168.50.3:8300
 
 #cas sso
 cas.enable=false
 cas.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90/portal/
+
 #cas client config
 cas.server-url-prefix=http://132.35.227.90:8082/cas
 cas.server-login-url=http://132.35.227.90:8082/cas/login
