--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -18,7 +18,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=../codetemp
-
 #temp image file path()
 paas.image.path=../downimage
 #temp save image file path()
@@ -30,7 +29,6 @@ ceph.ssh.username=root
 ceph.ssh.password=root.123
 ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
 ceph.ssh.mountpoint=/mnt/k8s/
-
 
 #docker()
 docker.io.url=http://10.162.17.12:28015
@@ -61,24 +59,25 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
 nginxConf.io.confurl=http://192.168.0.29
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
-nginxConf.io.serverAddr=http://10.162.128.128,http://10.162.128.129
+nginxConf.io.serverAddr=unicom.bonc.com
 
 #nginxserver
 nginx.server.DMZ=dmz
 nginx.server.USER=user
 
-#elasticsearch host
+#resource address
 resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
 
 #yum_source
 yumConf.io.address=10.162.17.11
 
 #elasticsearch host
-es.io.host=10.162.16.114:9200
+es.io.host=10.162.16.114:8300
 
 #cas sso
 cas.enable=false
 cas.server-logout-url=http://192.168.0.27:30004/cas/logout?service=http://132.35.227.90/portal/
+
 #cas client config
 cas.server-url-prefix=http://192.168.0.27:30004/cas
 cas.server-login-url=http://192.168.0.27:30004/cas/login
