--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -25,11 +25,17 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=./codetemp
-
 #temp image file path()
 paas.image.path=../downimage
 #temp save image file path()
 paas.saveimage.path=/home/paas/paas/apache-tomcat-8.0.32/downimage/
+
+#ceph()
+ceph.ssh.url=192.168.0.29
+ceph.ssh.username=root
+ceph.ssh.password=root.123
+ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
+ceph.ssh.mountpoint=/mnt/k8s/
 
 #docker()
 docker.io.url=http://192.168.5.115:28015
@@ -51,8 +57,8 @@ kubernetes.api.endpoint=http://192.168.5.129:8080/
 kubernetes.api.username=paas
 kubernetes.api.password=123456
 kubernetes.api.startport=30000
-kubernetes.api.address=192.168.5.129
 kubernetes.api.endport=30200
+kubernetes.api.address=192.168.5.129
 
 #nginxConf()
 nginxConf.io.confpath=/usr/local/nginx/conf.d/
@@ -64,7 +70,7 @@ nginxConf.io.serverIP=192.168.5.131
 nginx.server.DMZ=dmz
 nginx.server.USER=user
 
-#elasticsearch host
+#resource address
 resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
 
 #yum_source
@@ -76,6 +82,7 @@ es.io.host=192.168.5.115:9300
 #cas sso
 cas.enable=false
 cas.server-logout-url=http://132.35.227.90:80/cas/logout?service=http://132.35.227.90/portal/
+
 #cas client config
 cas.server-url-prefix=http://132.35.227.90:80/cas
 cas.server-login-url=http://132.35.227.90:80/cas/login
