*:修改启动容器cpu和内存大小的分配，添加内存和cpu大小的比例

--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -92,3 +92,5 @@ monitor.dbName=k8s
 ceph.name=admin
 ceph.monitor=10.162.16.116:6789,10.162.16.117:6789,10.162.16.118:6789
 ceph.key=QVFBQ1U2aFg0M3JBQlJBQTlUd2dSdm9WbDhscHRHUzVOY3BqT2c9PQ==
+
+ratio.memtocpu=8
