--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -97,3 +97,5 @@ monitor.dbName=k8s
 ceph.name=admin
 ceph.monitor=192.168.12.30:6789,192.168.12.31:6789,192.168.12.32:6789
 ceph.key=QVFDWnA0aFg3S3FmRkJBQXVMeFQyUGgwWmN5SkZPb25SQi9uckE9PQ==
+
+ratio.memtocpu=8
