*:将es客户端集群配置化

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -72,6 +72,7 @@ yumConf.io.address=10.161.48.112
 
 #elasticsearch host
 es.io.host=192.168.50.3:8300
+es.io.cluster-name=bonc_docker
 
 #cas sso
 cas.enable=false
