--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -73,6 +73,7 @@ yumConf.io.address=10.162.17.11
 
 #elasticsearch host
 es.io.host=10.162.16.114:8300
+es.io.cluster-name=bonc_elk_DB
 
 #cas sso
 cas.enable=false
