--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -88,7 +88,7 @@ resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/show
 resourceMmanage.address=http://192.168.0.174:8088/resreq/restlet/resourceArchive/showAllResource
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://192.168.0.174:8088/cas/logout?service=http://132.35.227.90/portal/
 
 #cas client config
