*:修改配置文件

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 server.port:8082
 
-spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://192.168.0.29:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 123456
 #spring.datasource.url = jdbc:mysql://132.35.227.90:3306/epm_docs?characterEncoding=utf-8&autoReconnect=true
 #spring.datasource.username = portal_docs
 #spring.datasource.password = bonc#*docs
